FIX: Image resource width should not overflow container.
Broken by 93f82444.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,10 @@ body {
   text-align: center;
 }
 
+img {
+  max-width: 100%;
+}
+
 h1 {
   text-transform: uppercase;
   padding: 10px;
